# CheckersCommon

./: CMakeLists.txt  README.md  conanfile.py
include/Networking/: Address.h  ClientSocket.h  IpType.h  SendReceiveSocket.h  ServerSocket.h  Socket.h  SocketType.h
include/StringUtils/: StringFormat.h
src/: client.cpp  main.cpp  server.cpp
src/Networking/: Address.cpp  ClientSocket.cpp  SendReceiveSocket.cpp  ServerSocket.cpp  Socket.cpp
